Use TOXENV variable in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,6 @@ install:
     - jdk_switcher use "${JDK_SWITCH}"
 script:
     - java -version
-    - TOX_ENVIRONMENT="py${TRAVIS_PYTHON_VERSION//./}"
-    - tox -e "$TOX_ENVIRONMENT"
+    - tox -e "$TOXENV"
 after_success:
-    - if [[ $TOX_ENVIRONMENT == 'py36' ]] ; then tox -e py36-coveralls; else echo "No coverage to do"; fi
+    - if [[ $TOXENV == 'py36' ]] ; then tox -e py36-coveralls; else echo "No coverage to do"; fi
