--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-dist: trusty
-sudo: required
+sudo: required  # Needed to install a recent version of OpenJDK as well as Python 3.7
 
 language: python
 
