--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,8 @@
 recursive-include pushapkscript/data *
+recursive-include examples/ *
 
 include LICENSE
 include README.md
-include config_example.json
 include version.txt
 include requirements*.txt
 
