--- a/docker.d/worker.yml
+++ b/docker.d/worker.yml
@@ -1,6 +1,8 @@
 work_dir: { "$eval": "WORK_DIR" }
 artifact_dir: { "$eval": "ARTIFACTS_DIR" }
 verbose: { "$eval": "VERBOSE == 'true'" }
+jarsigner_key_store: { "$eval": "JARSIGNER_KEY_STORE" }
+do_not_contact_google_play: { "$eval": "ENV != 'prod'" }
 taskcluster_scope_prefixes:
   $if: 'COT_PRODUCT == "mobile"'
   then:
@@ -12,7 +14,44 @@ taskcluster_scope_prefixes:
 products:
   $match:
     'COT_PRODUCT == "firefox" && ENV == "prod"':
+      - product_names: [ "beta", "aurora", "release" ]
+        digest_algorithm: SHA1
+        use_scope_for_channel: true
+        apps:
+          release:
+            google_play_track: production
+            service_account: { "$eval": "GOOGLE_PLAY_SERVICE_ACCOUNT_FIREFOX_RELEASE" }
+            package_names:
+              - "org.mozilla.firefox"
+            google_credentials_file: { "$eval": "GOOGLE_CREDENTIALS_FIREFOX_RELEASE_PATH" }
+            certificate_alias: release
+          beta:
+            google_play_track: production
+            service_account: { "$eval": "GOOGLE_PLAY_SERVICE_ACCOUNT_FIREFOX_BETA" }
+            package_names:
+              - "org.mozilla.firefox_beta"
+            google_credentials_file: { "$eval": "GOOGLE_CREDENTIALS_FIREFOX_BETA_PATH" }
+            certificate_alias: release
+          aurora:
+            google_play_track: beta
+            service_account: { "$eval": "GOOGLE_PLAY_SERVICE_ACCOUNT_FIREFOX_AURORA" }
+            package_names:
+              - "org.mozilla.fennec_aurora"
+            google_credentials_file: { "$eval": "GOOGLE_CREDENTIALS_FIREFOX_AURORA_PATH" }
+            certificate_alias: nightly
+
     'COT_PRODUCT == "firefox" && ENV == "dep"':
+      - product_names: [ "dep" ]
+        digest_algorithm: SHA1
+        use_scope_for_channel: true
+        apps:
+          dep:
+            service_account: dummy
+            package_names:
+              - "org.mozilla.fennec_aurora"
+            google_credentials_file: { "$eval": "GOOGLE_CREDENTIALS_FIREFOX_DEP_PATH" }
+            certificate_alias: dep
+
     'COT_PRODUCT == "mobile" && ENV == "prod"':
       - product_names: [ "fenix"]
         digest_algorithm: 'SHA-256'
@@ -52,160 +91,57 @@ products:
             - 'org.mozilla.focus'
             - 'org.mozilla.klar'
           certificate_alias: 'focus'
-        }
-      },
-      {
-        "product_names": [
-          "reference-browser"
-        ],
-        "digest_algorithm": "SHA-256",
-        "skip_check_multiple_locales": true,
-        "skip_check_same_locales": true,
-        "skip_checks_fennec": true,
-        "map_channels_to_tracks": true,
-        "single_app_config": {
-          "service_account": {
-            "$eval": "GOOGLE_PLAY_SERVICE_ACCOUNT_REFERENCE_BROWSER"
-          },
-          "google_credentials_file": "/app/configs/reference_browser.p12",
-          "package_names": [
-            "org.mozilla.reference.browser"
-          ],
-          "certificate_alias": "reference-browser"
-        }
-      }
-    ],
-  'COT_PRODUCT == "mobile" && ENV == "dep"':
+      - product_names: [ "reference-browser" ]
+        digest_algorithm: "SHA-256"
+        skip_check_multiple_locales: true
+        skip_check_same_locales: true
+        skip_checks_fennec: true
+        map_channels_to_tracks: true
+        single_app_config:
+          service_account: { "$eval": "GOOGLE_PLAY_SERVICE_ACCOUNT_REFERENCE_BROWSER" }
+          google_credentials_file: { "$eval": "GOOGLE_CREDENTIALS_REFERENCE_BROWSER_PATH" }
+          package_names:
+            - "org.mozilla.reference.browser"
+          certificate_alias: "reference-browser"
 
-    "else": [
-      {
-        "product_names": [
-          "fenix"
-        ],
-        "digest_algorithm": "SHA-256",
-        "skip_check_multiple_locales": true,
-        "skip_check_same_locales": true,
-        "skip_checks_fennec": true,
-        "map_channels_to_tracks": true,
-        "single_app_config": {
-          "package_names": [
-            "org.mozilla.fenix",
-            "org.mozilla.fenix.beta",
-            "org.mozilla.fenix.nightly"
-          ],
-          "service_account": "dummy",
-          "google_credentials_file": "/app/configs/fenix.p12",
-          "certificate_alias": "fenix"
-        }
-      },
-      {
-        "product_names": [
-          "focus"
-        ],
-        "digest_algorithm": "SHA-256",
-        "skip_check_ordered_version_codes": true,
-        "skip_check_multiple_locales": true,
-        "skip_check_same_locales": true,
-        "skip_checks_fennec": true,
-        "map_channels_to_tracks": true,
-        "single_app_config": {
-          "package_names": [
-            "org.mozilla.focus",
-            "org.mozilla.klar"
-          ],
-          "service_account": "dummy",
-          "google_credentials_file": "/app/configs/focus.p12",
-          "certificate_alias": "focus"
-        }
-      },
-      {
-        "product_names": [
-          "reference-browser"
-        ],
-        "digest_algorithm": "SHA-256",
-        "skip_check_multiple_locales": true,
-        "skip_check_same_locales": true,
-        "skip_checks_fennec": true,
-        "map_channels_to_tracks": true,
-        "single_app_config": {
-          "package_names": [
-            "org.mozilla.reference.browser"
-          ],
-          "service_account": "dummy",
-          "google_credentials_file": "/app/configs/reference_browser.p12",
-          "certificate_alias": "reference-browser"
-        }
-      }
-    ]
-  },
-  "else": {
-    "$if": "ENV == 'prod'",
-    "then": [
-      {
-        "product_names": [
-          "aurora",
-          "beta",
-          "release"
-        ],
-        "digest_algorithm": "SHA1",
-        "use_scope_for_channel": true,
-        "apps": {
-          "aurora": {
-            "package_names": [
-              "org.mozilla.fennec_aurora"
-            ],
-            "google_play_track": "beta",
-            "service_account": {
-              "$eval": "GOOGLE_PLAY_SERVICE_ACCOUNT_AURORA"
-            },
-            "google_credentials_file": "/app/configs/aurora.p12",
-            "certificate_alias": "nightly"
-          },
-          "beta": {
-            "package_names": [
-              "org.mozilla.firefox_beta"
-            ],
-            "google_play_track": "production",
-            "service_account": {
-              "$eval": "GOOGLE_PLAY_SERVICE_ACCOUNT_BETA"
-            },
-            "google_credentials_file": "/app/configs/beta.p12",
-            "certificate_alias": "release"
-          },
-          "release": {
-            "package_names": [
-              "org.mozilla.firefox"
-            ],
-            "google_play_track": "production",
-            "service_account": {
-              "$eval": "GOOGLE_PLAY_SERVICE_ACCOUNT_RELEASE"
-            },
-            "google_credentials_file": "/app/configs/release.p12",
-            "certificate_alias": "release"
-          }
-        }
-      }
-    ],
-    "else": [
-      {
-        "product_names": [
-          "dep"
-        ],
-        "digest_algorithm": "SHA1",
-        "use_scope_for_channel": true,
-        "apps": {
-          "dep": {
-            "package_names": [
-              "org.mozilla.fennec_aurora"
-            ],
-            "service_account": "dummy",
-            "google_credentials_file": "/app/configs/dep.p12",
-            "certificate_alias": "dep"
-          }
-        }
-      }
-    ]
-  }
-},
-jarsigner_key_store: { "$eval": "JARSIGNER_KEY_STORE" }
-do_not_contact_google_play: { "$eval": "ENV != 'prod'" }
+    'COT_PRODUCT == "mobile" && ENV == "dep"':
+      - product_names: [ "fenix" ]
+        digest_algorithm: "SHA-256"
+        skip_check_multiple_locales: true
+        skip_check_same_locales: true
+        skip_checks_fennec: true
+        map_channels_to_tracks: true
+        single_app_config:
+          package_names:
+            - "org.mozilla.fenix"
+            - "org.mozilla.fenix.beta"
+            - "org.mozilla.fenix.nightly"
+          service_account: "dummy"
+          google_credentials_file: { "$eval": "GOOGLE_CREDENTIALS_FENIX_DEP_PATH" }
+          certificate_alias: "fenix"
+      - product_names: [ "focus" ]
+        digest_algorithm: "SHA-256"
+        skip_check_ordered_version_codes: true
+        skip_check_multiple_locales: true
+        skip_check_same_locales: true
+        skip_checks_fennec: true
+        map_channels_to_tracks: true
+        single_app_config:
+          package_names:
+            - "org.mozilla.focus"
+            - "org.mozilla.klar"
+          service_account: "dummy"
+          google_credentials_file: { "$eval": "GOOGLE_CREDENTIALS_FOCUS_DEP_PATH" }
+          certificate_alias: "focus"
+      - product_names: [ "reference-browser" ]
+        digest_algorithm: "SHA-256"
+        skip_check_multiple_locales: true
+        skip_check_same_locales: true
+        skip_checks_fennec: true
+        map_channels_to_tracks: true
+        single_app_config:
+          package_names:
+            - "org.mozilla.reference.browser"
+          service_account: "dummy"
+          google_credentials_file: { "$eval": "GOOGLE_CREDENTIALS_REFERENCE_BROWSER_DEP_PATH" }
+          certificate_alias: "reference-browser"
